fixed the cutting off tags in the posts

--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -67,6 +67,7 @@
 .tags {
   padding: 10px 20px;
   display: inline-flex;
+  flex-wrap: wrap;
 }
 
 .message {
